# healthyvoice

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
build-logic/convention/: build.gradle.kts
common/base/: build.gradle.kts
common/core/: build.gradle.kts
common/core/data/: build.gradle.kts
common/core/domain/: build.gradle.kts
common/core/presentation/: build.gradle.kts
common/libs/recorder/: build.gradle.kts
common/resources/: build.gradle.kts
common/uikit/: build.gradle.kts
data/analyze/: build.gradle.kts
data/common/: build.gradle.kts
data/record/: build.gradle.kts
feature/analysis/data/: build.gradle.kts
feature/analysis/domain/: build.gradle.kts
feature/analysis/presentation/: build.gradle.kts
feature/analysis/presentation/src/main/cpp/: CMakeLists.txt  signal_processor_jni.cpp
feature/analyze/presentation/: build.gradle.kts
feature/common/data/: build.gradle.kts
feature/common/domain/: build.gradle.kts
feature/cut/presentation/: build.gradle.kts
feature/export/data/: build.gradle.kts
feature/export/domain/: build.gradle.kts
feature/export/presentation/: build.gradle.kts
feature/patient/data/: build.gradle.kts
feature/patient/domain/: build.gradle.kts
feature/patient/presentation/: build.gradle.kts
feature/record/data/: build.gradle.kts
features/analyze/: build.gradle.kts
features/cut/: build.gradle.kts
features/record/: build.gradle.kts
features/root/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+373 files in other folders)
